Fixed 'register.html' form layout aligned to the same width as the login form in 'login.html'. Updated 'footer.html' with correct text. 'style.css' styling for the footer and footer link.

--- a/src/eldercaresupreme/static/css/style.css
+++ b/src/eldercaresupreme/static/css/style.css
@@ -38,6 +38,7 @@ label.active {
 .modal-footer {
     background-color: #FBF8EF !important;
     font-family: 'Raleway', sans-serif;
+    width: 80%;
 }
 
 ul>li {
